--- a/app/src/main/res/layout/item_help_details.xml
+++ b/app/src/main/res/layout/item_help_details.xml
@@ -18,25 +18,36 @@
             android:layout_margin="8dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <construction.thesquare.shared.view.widget.JosefinSansTextView
                 android:id="@+id/question"
-                android:textSize="20dp"
+                android:textSize="16dp"
                 android:textColor="@color/blackSquareColor"
                 app:josefin_style="italic"
                 android:layout_marginTop="14dp"
                 android:layout_marginBottom="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-
-            <WebView
-                android:id="@+id/webview"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="5dp"
+            <com.github.aakira.expandablelayout.ExpandableLinearLayout
+                app:ael_expanded="false"
+                android:orientation="vertical"
+                app:ael_duration="500"
+                android:id="@+id/expandableLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="none" />
+                android:layout_height="wrap_content">
+
+                <construction.thesquare.shared.view.widget.JosefinSansTextView
+                    style="@style/UnderstandingBody"
+                    android:textColor="@color/blackSquareColor"
+                    android:layout_margin="@dimen/understanding_margin"
+                    android:id="@+id/answer"
+                    app:josefin_style="light"
+                    android:textSize="14dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="500dp"
+                   />
+            </com.github.aakira.expandablelayout.ExpandableLinearLayout>
 
         </LinearLayout>
     </RelativeLayout>
