--- a/app/src/main/res/layout/fragment_help_worker.xml
+++ b/app/src/main/res/layout/fragment_help_worker.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -29,6 +36,7 @@
                 android:textAlignment="center"
                 android:gravity="center"
                 android:id="@+id/search_input"
+                android:textSize="16dp"
                 app:josefin_style="italic"
                 android:hint="Search for anything... (price plans,bookings etc)"
                 android:layout_height="30dp" />
@@ -64,6 +72,24 @@
 
 
 
-        </LinearLayout>
 
+        </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:layout_gravity="bottom" >
+        <construction.thesquare.shared.view.widget.JosefinSansTextView
+            android:id="@+id/contact_us"
+            android:textAlignment="center"
+            android:text="@string/help_contact_us"
+            android:drawableBottom="@android:drawable/sym_action_email"
+            android:layout_width="match_parent"
+            app:josefin_style="light"
+            android:textSize="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 </LinearLayout>
+    </ScrollView>
