--- a/app/src/main/res/layout/form_login.xml
+++ b/app/src/main/res/layout/form_login.xml
@@ -16,10 +16,10 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
-        android:textColor="@color/black_overlay"
+        android:textColor="@color/blackSquareColor"
         android:textColorHint="@color/black_overlay"
-        android:textSize="16sp"
-        app:josefin_style="light" />
+        android:textSize="20sp"
+        app:josefin_style="semiBold" />
 
     <construction.thesquare.shared.view.widget.JosefinSansEditText
         android:id="@+id/password"
@@ -33,8 +33,8 @@
         android:padding="10dp"
         android:textColor="@color/black_overlay"
         android:textColorHint="@color/black_overlay"
-        android:textSize="16sp"
-        app:josefin_style="light" />
+        android:textSize="20sp"
+        app:josefin_style="semiBold" />
 
     <construction.thesquare.shared.view.widget.JosefinSansTextView
         android:id="@+id/login"
