--- a/app/src/main/res/layout/item_help_details.xml
+++ b/app/src/main/res/layout/item_help_details.xml
@@ -45,7 +45,7 @@
                     app:josefin_style="light"
                     android:textSize="14dp"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="wrap_content"
                    />
             </com.github.aakira.expandablelayout.ExpandableLinearLayout>
 
