--- a/app/src/main/res/layout/fragment_select_details.xml
+++ b/app/src/main/res/layout/fragment_select_details.xml
@@ -36,6 +36,7 @@
                 android:textSize="18sp"
                 app:josefin_style="light"
                 android:padding="24dp"
+                android:visibility="gone"
                 android:textAlignment="center"
                 android:layout_marginBottom="12dp"
                 android:background="@color/redSquareColor"
@@ -51,6 +52,7 @@
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 xmlns:app="http://schemas.android.com/apk/res-auto">
 
                 <LinearLayout
