--- a/app/src/main/res/layout/fragment_select_details.xml
+++ b/app/src/main/res/layout/fragment_select_details.xml
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!-- New Feature ! Connect Header -->
             <construction.thesquare.shared.view.widget.JosefinSansTextView
                 android:text="@string/connect_header"
                 android:textSize="18sp"
@@ -43,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <!-- New Feature ! Connect. -->
+            <!-- New Feature ! Connect Radio Buttons -->
             <android.support.v7.widget.CardView
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
@@ -441,7 +442,7 @@
                         android:text="@string/connect_number"
                         android:layout_marginTop="12dp" />
                     <android.support.design.widget.TextInputLayout
-                        android:id="@+id/in_layout_phone2"
+                        android:id="@+id/connect_phone_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -451,7 +452,7 @@
                             android:baselineAligned="false">
 
                             <com.hbb20.CountryCodePicker
-                                android:id="@+id/ccp2"
+                                android:id="@+id/ccp_connect"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 app:defaultNameCode="GB"
@@ -461,7 +462,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:maxLines="1"
-                                android:id="@+id/phone2"
+                                android:id="@+id/connect_phone"
                                 android:hint="@string/key_contact_mobile_number"
                                 style="@style/square_edit_text"
                                 android:inputType="phone"/>
@@ -520,7 +521,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-
+                        <!-- Date -->
                         <LinearLayout
                             android:orientation="horizontal"
                             android:layout_width="wrap_content"
@@ -547,7 +548,7 @@
                                 android:text="Day         "
                                 android:inputType="textCapSentences" />
                         </LinearLayout>
-
+                        <!-- Time -->
                         <LinearLayout
                             android:orientation="horizontal"
                             android:layout_width="wrap_content"
