new feature connect part3

--- a/app/src/main/res/layout/fragment_preview_job.xml
+++ b/app/src/main/res/layout/fragment_preview_job.xml
@@ -492,6 +492,91 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
 
+        <!-- NEW FEATURE! Contact Details for Connect Job -->
+        <LinearLayout
+            android:id="@+id/job_details_connect_contact"
+            android:orientation="vertical"
+            android:background="@color/darkSquareColor"
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <construction.thesquare.shared.view.widget.JosefinSansTextView
+                    android:text="@string/connect_contact"
+                    android:layout_marginBottom="6dp"
+                    android:id="@+id/preview_connect"
+                    android:textColor="@android:color/white"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:drawableRight="@drawable/ic_mode_edit_black_24dp"
+                    android:drawableTint="@color/redSquareColor"
+                    android:drawablePadding="18dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <!-- Message Icon for v2 -->
+                <View
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:visibility="gone"
+                    android:background="@drawable/ic_message"/>
+            </RelativeLayout>
+
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:id="@+id/job_details_connect_person"
+                android:textColor="@color/graySquareColor"
+                android:textSize="16dp"
+                app:josefin_style="italic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:id="@+id/job_details_connect_phone"
+                android:textColor="@color/graySquareColor"
+                android:textSize="16dp"
+                app:josefin_style="italic"
+                android:layout_marginTop="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:id="@+id/job_details_connect_email"
+                android:textColor="@color/graySquareColor"
+                android:textSize="16dp"
+                app:josefin_style="italic"
+                android:layout_marginTop="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:text="@string/connect_application_deadline"
+                android:textColor="@android:color/white"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:layout_marginBottom="6dp"
+                android:layout_marginTop="12dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <construction.thesquare.shared.view.widget.JosefinSansTextView
+                android:id="@+id/job_details_connect_date"
+                android:textColor="@color/graySquareColor"
+                android:textSize="16dp"
+                app:josefin_style="italic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
         <LinearLayout
             android:weightSum="2"
             android:orientation="horizontal"
