--- a/app/src/main/res/layout/fragment_select_role.xml
+++ b/app/src/main/res/layout/fragment_select_role.xml
@@ -25,6 +25,19 @@
 
         <include
             layout="@layout/include_filter"/>
+
+        <construction.thesquare.shared.view.widget.JosefinSansTextView
+            android:textSize="22sp"
+            app:josefin_style="italic"
+            android:id="@+id/suggest_role"
+            android:layout_marginTop="6dp"
+            android:textAlignment="center"
+            android:text="@string/suggest_role"
+            android:layout_marginLeft="42dp"
+            android:layout_marginRight="42dp"
+            android:textColor="@color/redSquareColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
