--- a/app/src/main/res/layout/include_filter.xml
+++ b/app/src/main/res/layout/include_filter.xml
@@ -22,16 +22,16 @@
         android:backgroundTint="@color/redSquareColor" />
 
     <construction.thesquare.shared.view.widget.JosefinSansEditText
-        android:layout_width="120dp"
-        android:layout_margin="12dp"
-        android:textSize="18sp"
-        android:padding="4dp"
-        android:nextFocusUp="@id/filter"
-        android:nextFocusLeft="@id/filter"
-        android:layout_height="wrap_content"
         android:id="@+id/filter"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:hint="@string/filter"
         android:imeOptions="actionDone"
-        android:hint="@string/filter" />
+        android:nextFocusLeft="@id/filter"
+        android:nextFocusUp="@id/filter"
+        android:paddingTop="4dp"
+        android:textSize="18sp" />
 
     <View
         android:layout_margin="12dp"
