--- a/app/src/main/res/layout/fragment_select_experience_type.xml
+++ b/app/src/main/res/layout/fragment_select_experience_type.xml
@@ -34,6 +34,18 @@
 
         <include
             layout="@layout/include_filter"/>
+        <construction.thesquare.shared.view.widget.JosefinSansTextView
+            android:textSize="18sp"
+            app:josefin_style="italic"
+            android:id="@+id/suggest_role"
+            android:layout_marginBottom="4dp"
+            android:textAlignment="center"
+            android:text="@string/suggest_experience"
+            android:layout_marginLeft="42dp"
+            android:layout_marginRight="42dp"
+            android:textColor="@color/redSquareColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
