--- a/app/src/main/res/layout/fragment_select_info_worker.xml
+++ b/app/src/main/res/layout/fragment_select_info_worker.xml
@@ -36,7 +36,7 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_margin="20dp"
-            android:src="@drawable/bob" />
+            android:src="@drawable/bobwithplus" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/first_name_input"
