--- a/app/src/main/res/layout/fragment_select_details.xml
+++ b/app/src/main/res/layout/fragment_select_details.xml
@@ -37,6 +37,7 @@
                 android:textSize="18sp"
                 app:josefin_style="light"
                 android:padding="24dp"
+                android:visibility="gone"
                 android:textAlignment="center"
                 android:layout_marginBottom="12dp"
                 android:background="@color/redSquareColor"
@@ -46,6 +47,7 @@
 
             <!-- New Feature ! Connect Radio Buttons -->
             <android.support.v7.widget.CardView
+                android:visibility="gone"
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
                 android:layout_marginBottom="12dp"
