--- a/app/src/main/res/layout/item_help_details.xml
+++ b/app/src/main/res/layout/item_help_details.xml
@@ -22,7 +22,8 @@
 
             <construction.thesquare.shared.view.widget.JosefinSansTextView
                 android:id="@+id/question"
-                android:textSize="16dp"
+                android:textSize="20dp"
+                android:lineSpacingExtra="5dp"
                 android:textColor="@color/blackSquareColor"
                 app:josefin_style="italic"
                 android:layout_marginTop="14dp"
@@ -40,13 +41,21 @@
                 <construction.thesquare.shared.view.widget.JosefinSansTextView
                     style="@style/UnderstandingBody"
                     android:textColor="@color/blackSquareColor"
-                    android:layout_margin="@dimen/understanding_margin"
+                    android:layout_margin="5dp"
                     android:id="@+id/answer"
                     app:josefin_style="light"
-                    android:textSize="14dp"
+                    android:textSize="18dp"
+                    android:lineSpacingExtra="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                    />
+                <ImageView
+                    android:id="@+id/close"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:tint="@color/redSquareColor"
+                    android:layout_gravity="right"
+                    android:src="@drawable/ic_close" />
             </com.github.aakira.expandablelayout.ExpandableLinearLayout>
 
         </LinearLayout>
