--- a/app/src/main/res/layout/loader.xml
+++ b/app/src/main/res/layout/loader.xml
@@ -3,11 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
-    <ProgressBar
-      android:id="@+id/progressBar1"
-      style="?android:attr/progressBarStyleSmall"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+    <ImageView
+      android:id="@+id/progressImage"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
       android:layout_centerInParent="true" />
-
 </RelativeLayout>
