--- a/app/src/main/res/menu/menu_toolbar_employer.xml
+++ b/app/src/main/res/menu/menu_toolbar_employer.xml
@@ -4,9 +4,9 @@
                                        >
 
     <item android:id="@+id/createEmployerJob"
-        android:icon="@drawable/ic_add_black_24dp"
         app:showAsAction="ifRoom"
         android:orderInCategory="1"
         android:title=""
+        app:actionLayout="@layout/menu_create"
         android:menuCategory="secondary"/>
 </menu>
